subdir('1_hello_world')
subdir('2_concurrent_even_number_counting')
subdir('3_async_file_processing')
subdir('4_async_file_processing_version_2')
subdir('5_prime_number_finder')
subdir('6_manual_executor')
subdir('7_when_all')
subdir('8_when_any')
subdir('9_result_promise')
subdir('10_regular_timer')
subdir('11_oneshot_timer')
subdir('12_delay_object')
subdir('13_generator')